<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/menu_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/date"
        style="@style/text.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/date_shape"
        android:paddingVertical="5dp"
        android:text="10.04.2024 11:45"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/progress"
        style="@style/text.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner_shape"
        android:backgroundTint="@color/in_progress"
        android:paddingVertical="5dp"
        android:text="@string/status_in_progress"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_lay"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_shape"
            android:focusedByDefault="true"
            android:hint="@string/hint_new_task"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bold"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:text="Bold"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/italic"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"
            android:text="Italic"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/underline"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"
            android:text="Under"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bullet"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="20dp"
            android:text="Bullet"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/strikethrough"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:text="Strikethrough"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/checkbox"
            style="@style/text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/action"
            android:paddingHorizontal="15dp"
            android:text="Checkbox"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_lay"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            style="@style/text.Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/text.Description"
            android:background="@drawable/rounded_corner_shape"
            android:backgroundTint="@color/done"
            android:focusedByDefault="true"
            android:hint="@string/hint_full_description"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>